Bug 214843 Space doesn't scroll when link's child has focus r=aaronleventhal, sr=jst, patch by neo.liu@sun.com